# cutplan

./: CMakeLists.txt  README.md  cutplan-demo.asd  cutplan.asd  package.xml  pizza-ninja.asd
include/cutplan/: ExampleManeuvers.h  ExamplePlanners.h  Maneuver.h  ManeuverPlanner.h  SamplingVolume.h  typedefs.h
meshes/: demo_collector.stl  demo_forbidden.stl  demo_goal.stl  dilated-slice.stl  mini-cube.stl  pizza.stl  slice.stl
outputs/: outputs.txt
src/: ExampleManeuvers.cpp  ExamplePlanners.cpp  Maneuver.cpp  ManeuverPlanner.cpp  SamplingVolume.cpp  cutplan-src.lisp  cutplan.cpp  ninja-package.lisp  package.lisp  pizza-ninja.lisp  tests.lisp
srv/: GetManeuver.srv
