<package>
  <name>cutplan</name>
  <version>0.1.0</version>

  <description>
    Planner for volume coverage (tasks such as cutting, coloring, sweeping).
  </description>

  <author email="blandc@cs.uni-bremen.de">Mihai Pomarlan</author>
  <maintainer email="blandc@cs.uni-bremen.de">Mihai Pomarlan</maintainer>
  <license>BSD</license>

  <url type="website">http://open-ease.org</url>
  <url type="bugtracker">https://github.com/mpomarlan/cutplan/issues</url>
  <url type="repository">https://github.com/mpomarlan/cutplan</url>

  <buildtool_depend>catkin</buildtool_depend> 

  <build_depend>trimesh</build_depend>
  <build_depend>meshproc_msgs</build_depend>
  <build_depend>ompl</build_depend>
  <build_depend>meshproc_csg</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>

 
  <run_depend>trimesh</run_depend>
  <run_depend>ompl</run_depend>
  <run_depend>meshproc_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>

</package>
