<package>
  <name>cutplan</name>
  <version>0.1.0</version>

  <description>
    Planner for volume coverage (tasks such as cutting, coloring, sweeping).
  </description>

  <author email="blandc@cs.uni-bremen.de">Mihai Pomarlan</author>
  <maintainer email="blandc@cs.uni-bremen.de">Mihai Pomarlan</maintainer>
  <license>BSD</license>

  <url type="website">http://open-ease.org</url>
  <url type="bugtracker">https://github.com/mpomarlan/cutplan/issues</url>
  <url type="repository">https://github.com/mpomarlan/cutplan</url>

  <buildtool_depend>catkin</buildtool_depend> 

  <build_depend>message_generation</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>meshproc_msgs</build_depend>
  <build_depend>roslisp</build_depend>
 

 
  <run_depend>message_runtime</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>meshproc_msgs</run_depend>
  <run_depend>roslisp</run_depend>

</package>
